# hRosetta

./: .gitignore  LICENSE  Makefile  README  TODO.txt  hRosetta.cabal  test_stack_overflow.sh
Rosetta/: Fragments.hs  PyMol.hs  RDC.hs  Restraints.hs  SS.hs  Silent.hs  Util.hs
examples/restraints/: .gitignore  asyn_gs.newcst  asyn_gs_long.rdc  ideal.rdc  prion_Da4_Dr3.rdc  prion_Da5_Dr2.rdc  short.newcst
examples/silent/: best.out  hide.pml  newsilent.out  orig.out  script.pml  strand_colors.pml  test.sh
scripts/: .gitignore  parseRestraints.hs  selectBest.hs  silentToPyMol.hs
tests/: .gitignore  checkScoreHeader.sh  checkScoreRecord.sh  checkSilentRecord.sh  test_Fragments.hs  test_RDCRestraints.hs  test_Restraints.hs  test_Silent.hs  test_Silent2.hs  test_Util.hs
