name:                hRosetta
version:             0.5.2
stability:           beta
homepage:            https://github.com/mgajda/hRosetta
package-url:         http://hackage.haskell.org/package/hRosetta
synopsis:            Parser and data structure for manipulating Rosetta files.
description:         Makes it easier to inspect and edit Rosetta fragment, silent, and restraint files.
category:            Bioinformatics 
license:             BSD3
license-file:        LICENSE

author:              Michal J. Gajda
copyright:           Copyright by Michal J. Gajda '2013
maintainer:          mjgajda@googlemail.com
bug-reports:         mailto:mjgajda@googlemail.com

build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.4.2
data-files:          README

source-repository head
  type:     git
  location: git://github.com:mgajda/hpdb.git

Library
  ghc-options:      -fspec-constr-count=4 -O3 
  build-depends:    base>=4.0, base <4.7, bytestring, vector, deepseq >= 1.3.0.0
  exposed-modules:  Rosetta.SS, Rosetta.PyMol, Rosetta.Restraints, Rosetta.Fragments, Rosetta.Silent, Rosetta.Util
  exposed:          True

Executable silentToPymol
  main-is:          silentToPyMol.hs
  hs-source-dirs:   scripts
  ghc-options:      -fspec-constr-count=4 -O3 
  Build-depends:    base>=4.0, base <4.7, hRosetta, bytestring, filepath

Executable parseRestraints
  main-is:          parseRestraints.hs
  hs-source-dirs:   scripts
  ghc-options:      -fspec-constr-count=4 -O3 
  Build-depends:    base>=4.0, base <4.7, hRosetta, bytestring

Executable selectBest
  main-is:          selectBest.hs
  hs-source-dirs:   scripts
  ghc-options:      -fspec-constr-count=4 -O3 
  Build-depends:    base>=4.0, base <4.7, hRosetta, bytestring

Test-suite test_Fragments
  main-is:          test_Fragments.hs
  hs-source-dirs:   tests
  Type:             exitcode-stdio-1.0
  ghc-options:      -fspec-constr-count=4 -O3 
  Build-depends:    base>=4.0, base <4.7, hRosetta, bytestring, vector

Test-suite test_Restraints
  main-is:          test_Restraints.hs
  hs-source-dirs:   tests
  Type:             exitcode-stdio-1.0
  ghc-options:      -fspec-constr-count=4 -O3 
  Build-depends:    base>=4.0, base <4.7, hRosetta, bytestring, QuickCheck
 
Test-suite test_Silent
  main-is:          test_Silent.hs
  hs-source-dirs:   tests
  Type:             exitcode-stdio-1.0
  ghc-options:      -fspec-constr-count=4 -O3 
  Build-depends:    base>=4.0, base <4.7, hRosetta, bytestring

Test-suite test_Silent2
  main-is:          test_Silent2.hs
  hs-source-dirs:   tests
  Type:             exitcode-stdio-1.0
  ghc-options:      -fspec-constr-count=4 -O3 
  Build-depends:    base>=4.0, base <4.7, hRosetta, bytestring

Test-suite test_Util
  main-is:          test_Util.hs
  hs-source-dirs:   tests .
  Type:             exitcode-stdio-1.0
  ghc-options:      -fspec-constr-count=4 -O3 
  Build-depends:    base>=4.0, base <4.7, hRosetta, bytestring, QuickCheck

